# music

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: checks.yaml
deployment/: Dockerfile
notebooks/: features.ipynb  model.ipynb  playlists.ipynb  prepare.ipynb  spotipy.ipynb  spotipy_old.ipynb
src/music/: api.py  data.py  models.py
src/music/workflows/: get_albums.py  get_artists.py  get_features.py  get_tracks.py  utils.py
tests/: conftest.py
tests/test_music/: test_api.py  test_models.py
